Fixed z-index for Related Products > Comparison modal

--- a/client/src/components/Overview/overview.module.css
+++ b/client/src/components/Overview/overview.module.css
@@ -100,7 +100,7 @@ h2.header {
   width: 100%;
   margin: 0 auto;
   padding: 60px 0;
-  z-index: 10;
+  z-index: 3;
 }
 
 .overview__images {
@@ -216,7 +216,7 @@ Convert scrollbar to ⏮ arrows ⏭
 
   visibility: visible;
   position: fixed;
-  z-index: 3;
+  z-index: 5;
   /* left: 60px; */
 }
 
